@@ -24,6 +24,7 @@
 
 #include <stdio.h>
 #include "_scm.h"
+#include "ports.h"
 #include "smob.h"
 
 #include "mallocs.h"
